force-app/main/default/objects/Announcement__c/Announcement__c.object-meta.xml
<CustomObject>
    <description>Rich text formatted, optionally time boxed, org-wide Announcements to be managed by specific &quot;Announcements Manager&quot; users and implemented via Solution
        Integrator&apos;s custom UIs.</description>
    <label>Announcement</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Announcements</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>