force-app/main/default/objects/Announcement__c/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Flag to drive announcement display in custom UIs.</description>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>