force-app/main/default/objects/Announcement__c/fields/End_Date__c.field-meta.xml
<CustomField>
    <fullName>End_Date__c</fullName>
    <description>Ending date to drive visibility of the announcement (inclusive - displays up to and on this date, but not after).</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>When populated, this Announcement will display if Active is true and up to (and including) this date.</inlineHelpText>
    <label>End Date</label>
    <type>Date</type>
</CustomField>