force-app/main/default/objects/Announcement__c/fields/Order__c.field-meta.xml
<CustomField>
    <fullName>Order__c</fullName>
    <description>Drives SOQL Order By return results of Announcement records.</description>
    <inlineHelpText
    >Optionally specify an integer value for Announcement display order (1 displays before 42). If blank, all blank Order actively displayed Announcements will appear first,
        sorted by date of creation, followed by populated Order actively displayed Announcements.</inlineHelpText>
    <label>Order</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>