force-app/main/default/objects/Announcement__c/fields/Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Start_Date__c</fullName>
    <description>Starting date to drive visibility of the announcement (inclusive - displays on and after this date, but not before).</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>When populated, this Announcement will display if Active is true and after (and including) this date.</inlineHelpText>
    <label>Start Date</label>
    <type>Date</type>
</CustomField>